# src/main/java/ru/app/accountmanagement/model/SubscriptionStatus.java
@@ -1,0 +1,10 @@
+package ru.app.accountmanagement.model;
+
+public enum SubscriptionStatus {
+
+    ACTIVE,
+    INACTIVE,
+    PENDING,
+    CANCELLED
+
+}
